--- a/00-challenges/02-js-output/index.html
+++ b/00-challenges/02-js-output/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ways os JavaScript Outputs</title>
+    <title>JavaScript Outputs</title>
 </head>
 <body>
     <h1>Ways os JavaScript Outputs</h1>
@@ -13,11 +13,15 @@
         <li>Writting into an HTML element</li>
         <dd>using "innerHTML" or "innerText"</dd>
         <li>Writing into the HTML output</li>
-        <dd>using "document.write()"</dd>
+        <dd>using "document.writeln()"</dd>
         <li>Writing into an alert box</li>
         <dd>using "window.alert()"</dd>
         <li>Writing into the browser console</li>
         <dd>using "console.log()"</dd>
     </ul>
+    <p>To access the HTML element, you can use the "document.getElementByID(id)" method. Then use "innerHTML" in order to change the HTML content, or "innerText" to change the inner text.</p>
+    <script src="script.js"></script>
+    <p>For debugging purposes, you can call the "console.log()" method in the browser to display data.</p>
+    <p>Last but no least, use can use the "window.print()" method on click, in order to print the content of the current window.</p>
 </body>
 </html>
