--- a/02-output-methods/index.html
+++ b/02-output-methods/index.html
@@ -22,6 +22,7 @@
     <p>To access the HTML element, you can use the "document.getElementByID(id)" method. Then use "innerHTML" in order to change the HTML content, or "innerText" to change the inner text.</p>
     <script src="script.js"></script>
     <p>For debugging purposes, you can call the "console.log()" method in the browser to display data.</p>
-    <p>Last but no least, use can use the "window.print()" method on click, in order to print the content of the current window.</p>
+    <p>You can use the "window.print()" method on click, in order to print the content of the current window.</p>
+    <p>Last but no least, when using a string, its content needs to be inside single quotes, double quotes, or crasis.</p>
 </body>
 </html>
