--- a/02-output-methods/index.html
+++ b/02-output-methods/index.html
@@ -23,6 +23,6 @@
     <script src="script.js"></script>
     <p>For debugging purposes, you can call the "console.log()" method in the browser to display data.</p>
     <p>You can use the "window.print()" method on click, in order to print the content of the current window.</p>
-    <p>Last but no least, when using a string, its content needs to be inside single quotes, double quotes, or backticks.</p>
+    <p>Last but no least, when using a string, its content needs to be inside single quotes, double quotes, or backticks. To insert a string with quotes on a determined term, use a backslash (\) before the quote.</p>
 </body>
 </html>
